cmake_minimum_required(VERSION 3.22.1)
project(NodeDiff)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_CXX_STANDARD 20)

# changing binary and lib output directory
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE "RelWithDebInfo")
endif()

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
if(NOT GENERATOR_IS_MULTI_CONFIG AND CMAKE_BUILD_TYPE MATCHES Debug)
    set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin/Debug)
endif(NOT GENERATOR_IS_MULTI_CONFIG AND CMAKE_BUILD_TYPE MATCHES Debug)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
if(GENERATOR_IS_MULTI_CONFIG)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
endif(GENERATOR_IS_MULTI_CONFIG)

option(ND_BUILD_EXAMPLES "Build NodeDiff examples (e.g. Blender VCS)" On)
option(ND_STATISTICS_ENABLED "Enable statistics collection on both nodediff lib and examples" On)

if(ND_STATISTICS_ENABLED)
    add_compile_definitions(ND_STATISTICS_ENABLED)
endif(ND_STATISTICS_ENABLED)

add_subdirectory(external)
add_subdirectory(lib)
if(ND_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif(ND_BUILD_EXAMPLES)